# openapi/openapi.json
@@ -8265,14 +8265,58 @@
                     },
                     "checks": {
                       "type": "object",
-                      "additionalProperties": {
-                        "type": "string",
-                        "enum": [
-                          "up",
-                          "down",
-                          "degraded",
-                          "current"
-                        ]
+                      "additionalProperties": false,
+                      "required": [
+                        "postgres",
+                        "redis",
+                        "migrations",
+                        "minio",
+                        "geoService",
+                        "mail"
+                      ],
+                      "properties": {
+                        "postgres": {
+                          "type": "string",
+                          "enum": [
+                            "up",
+                            "down"
+                          ]
+                        },
+                        "redis": {
+                          "type": "string",
+                          "enum": [
+                            "up",
+                            "down"
+                          ]
+                        },
+                        "migrations": {
+                          "type": "string",
+                          "enum": [
+                            "current",
+                            "down"
+                          ]
+                        },
+                        "minio": {
+                          "type": "string",
+                          "enum": [
+                            "up",
+                            "down"
+                          ]
+                        },
+                        "geoService": {
+                          "type": "string",
+                          "enum": [
+                            "up",
+                            "degraded"
+                          ]
+                        },
+                        "mail": {
+                          "type": "string",
+                          "enum": [
+                            "up",
+                            "degraded"
+                          ]
+                        }
                       }
                     }
                   }
